# rustic_core

./: .gitignore  .justfile  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  build-dependencies.just  cliff.toml  deny.toml  dprint.json  error_expanded.rs  release-plz.toml  typos.toml
.cargo/: audit.toml  (+1 more)
crates/backend/: CHANGELOG.md  Cargo.toml  README.md
crates/backend/src/: choose.rs  error.rs  lib.rs  local.rs  opendal.rs  rclone.rs  rest.rs  util.rs
crates/backend/src/opendal/: s3.rs  sftp.rs
crates/backend/tests/fixtures/opendal/: b2.toml  connections_20.toml  pcloud.toml  retry_20.toml  retry_default.toml  retry_off.toml  s3_aws.toml  s3_idrive.toml  throttle.toml  webdav_owncloud_nextcloud.toml
crates/backends/: Cargo.toml
crates/backends/src/: choose.rs  error.rs  lib.rs  local.rs  opendal.rs  rclone.rs  rest.rs  util.rs
crates/backends/src/opendal/: s3.rs
crates/config/: CHANGELOG.md  Cargo.toml  README.md
crates/config/src/: cli.rs  lib.rs  util.rs
crates/core/: CHANGELOG.md  Cargo.toml  README.md
crates/core/benches/: index.rs
crates/core/examples/: backup.rs  check.rs  config.rs  find.rs  forget.rs  init.rs  key.rs  ls.rs  merge.rs  prune.rs  restore.rs
crates/core/proptest-regressions/backend/: node.txt
crates/core/src/: archiver.rs  backend.rs  blob.rs  chunker.rs  commands.rs  crypto.rs  error.rs  id.rs  index.rs  lib.rs  progress.rs  repofile.rs  repository.rs  util.rs  vfs.rs
crates/core/src/archiver/: file_archiver.rs  parent.rs  tree.rs  tree_archiver.rs
crates/core/src/archiver/snapshots/: rustic_core__archiver__tree__tests__tree_iter#complex.snap  rustic_core__archiver__tree__tests__tree_iter#complex_relative.snap  rustic_core__archiver__tree__tests__tree_iter#complex_root.snap  rustic_core__archiver__tree__tests__tree_iter#simple.snap  rustic_core__archiver__tree__tests__tree_iter#simple_relative.snap  rustic_core__archiver__tree__tests__tree_iter#simple_root.snap  rustic_core__archiver__tree__tests__tree_iter#windows.snap
crates/core/src/backend/: cache.rs  childstdout.rs  choose.rs  decrypt.rs  dry_run.rs  hotcold.rs  ignore.rs  in_memory.rs  local_destination.rs  lock.rs  node.rs  pack_cache.rs  stdin.rs  warm_up.rs
crates/core/src/backend/ignore/: mapper.rs
crates/core/src/backend/node/: modification.rs
crates/core/src/blob/: pack_sizer.rs  packer.rs  repopacker.rs  tree.rs
crates/core/src/blob/snapshots/: rustic_core__blob__packer__tests__pack_sizers.snap
crates/core/src/blob/tree/: excludes.rs  modify.rs  rewrite.rs
crates/core/src/cdc/: polynom.rs  rolling_hash.rs
crates/core/src/chunker/: fixed_size.rs  rabin.rs
crates/core/src/chunker/snapshots/: rustic_core__chunker__fixed_size__tests__chunk-size1045504.snap  rustic_core__chunker__fixed_size__tests__chunk-size1048576.snap  rustic_core__chunker__rabin__tests__chunk_random.snap
crates/core/src/commands/: backup.rs  cat.rs  check.rs  config.rs  copy.rs  dump.rs  forget.rs  fs.rs  init.rs  key.rs  lock.rs  merge.rs  prune.rs  repair.rs  repoinfo.rs  restore.rs  rewrite.rs  snapshots.rs
crates/core/src/crypto/: aespoly1305.rs  hasher.rs
crates/core/src/error/: collector.rs  summary.rs
crates/core/src/index/: binarysorted.rs  indexer.rs  repoindexer.rs  sorted.rs
crates/core/src/repofile/: configfile.rs  indexfile.rs  keyfile.rs  packfile.rs  snapshotfile.rs
crates/core/src/repository/: command_input.rs  credentials.rs  status.rs  warm_up.rs
crates/core/src/vfs/: format.rs  fusefs.rs  webdavfs.rs
crates/core/tests/: command_input.rs  errors.rs  integration.rs  keys.rs  public_api.rs  warm_up.rs
crates/core/tests/fixtures/: config  key-failing  key1  key2
crates/core/tests/integration/: append_only.rs  backup.rs  check.rs  chunker.rs  copy.rs  dump.rs  find.rs  hotcold.rs  key.rs  ls.rs  prune.rs  repair_snapshots.rs  restore.rs  rewrite.rs  snapshots.rs  vfs.rs
crates/core/tests/public_api_fixtures/: public-api_macos.txt  public-api_win.txt
crates/core/tests/snapshots/: errors__error_debug.snap  errors__error_display.snap  errors__log_output_minimal_passes.snap  errors__log_output_passes.snap  integration__backup-2.snap  integration__backup-dir-summary-first-nix.snap  integration__backup-dir-summary-second-windows.snap  integration__backup-dir-tree-nix.snap  integration__backup-dir-tree-windows.snap  integration__backup-exclude-xattr-nix.snap  integration__backup-tar-groups-nix.snap  integration__backup-tar-groups-windows.snap  integration__backup-tar-matching-snaps-nix.snap  integration__backup-tar-matching-snaps-windows.snap  integration__backup-tar-summary-first-nix.snap  integration__backup-tar-summary-first-windows.snap  integration__backup-tar-summary-second-nix.snap  integration__backup-tar-summary-second-windows.snap  integration__backup-tar-summary-third-nix.snap  integration__backup-tar-summary-third-windows.snap  integration__backup-tar-tree-nix.snap  integration__backup-tar-tree-windows.snap  integration__backup.snap  integration__backup_dry_run-2.snap  integration__backup_dry_run.snap  integration__backup_dry_run_with_tar_gz_passes-2.snap  integration__backup_dry_run_with_tar_gz_passes-2.snap.new  integration__backup_dry_run_with_tar_gz_passes.snap  integration__backup_dry_run_with_tar_gz_passes.snap.new  integration__backup_with_dir_passes-2.snap  integration__backup_with_dir_passes-2.snap.new  integration__backup_with_dir_passes.snap  integration__backup_with_tar_gz_passes-2.snap  integration__backup_with_tar_gz_passes-2.snap.new  integration__backup_with_tar_gz_passes.snap  integration__backup_with_tar_gz_passes.snap.new  integration__dryrun-tar-summary-first-nix.snap  integration__dryrun-tar-summary-first-windows.snap  integration__dryrun-tar-summary-second-nix.snap  integration__dryrun-tar-summary-second-windows.snap  (+21 more)
crates/testing/: CHANGELOG.md  Cargo.toml
crates/testing/src/: backend.rs  lib.rs
examples/find/: Cargo.toml
examples/find/examples/: find.rs
examples/forget/: Cargo.toml
examples/forget/examples/: forget.rs
examples/tag/: Cargo.toml
examples/tag/examples/: tag.rs
(+265 files in other folders)
