[workspace]
members = [
  "crates/backend",
  "crates/config",
  "crates/core",
  "crates/testing",
  "examples/*",
]
resolver = "2"

[workspace.package]
rust-version = "1.72.0"

[workspace.dependencies]
aho-corasick = "1.1.2"
rustic_backend = { path = "crates/backend" }
rustic_core = { path = "crates/core" }
simplelog = "0.12.2"

# dev-dependencies
rstest = "0.18.2"
tempfile = "3.10.1"

# see: https://nnethercote.github.io/perf-book/build-configuration.html
[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

# compile dependencies with optimizations in dev mode
# see: https://doc.rust-lang.org/stable/cargo/reference/profiles.html#overrides
[profile.dev.package."*"]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
debug = false # true for profiling
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
strip = true
panic = "abort"

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = true # true for profiling
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
