[package]
name = "rustic_backend"
version = "0.1.0"
authors = ["the rustic-rs team"]
categories = ["Algorithms", "Data structures", "Filesystem"]
documentation = "https://docs.rs/rustic_backend"
edition = "2021"
homepage = "https://rustic.cli.rs/"
include = ["src/**/*", "LICENSE-*", "README.md"]
keywords = ["backup", "restic", "deduplication", "encryption", "library"]
license = "Apache-2.0 OR MIT"
publish = true
readme = "README.md"
repository = "https://github.com/rustic-rs/rustic_core/tree/main/crates/backend"
resolver = "2"
rust-version = { workspace = true }
description = """
rustic_backend - library for supporting various backends in rustic-rs
"""

[lib]
path = "src/lib.rs"
name = "rustic_backend"
test = true
doctest = true
bench = true
doc = true
harness = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
cli = ["merge", "clap"]
merge = ["dep:merge"]
clap = ["dep:clap"]

[dependencies]
# core
rustic_core = { path = "../core", features = ["cli"] }

# errors
anyhow = "1.0.75"
displaydoc = "0.2.4"
thiserror = "1.0.52"

# logging
log = "0.4.20"

# other dependencies
bytes = "1.5.0"
derive_setters = "0.1.6"
humantime = "2.1.0"
itertools = "0.12.0"
merge = { version = "0.1.0", optional = true }
strum = "0.25"
strum_macros = "0.25"

# serialization
binrw = "0.13.3"
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.193" }
serde-aux = "4.3.1"
serde_derive = "1.0.193"
serde_json = "1.0.108"
serde_with = { version = "3.4.0", features = ["base64"] }
shell-words = "1.1.0"

# cli
clap = { version = "4.4.11", optional = true, features = ["derive", "env", "wrap_help"] }

# local backend
aho-corasick = "1.1.2"
cached = { version = "0.46.1", default-features = false, features = ["proc_macro"] }
filetime = "0.2.23"
ignore = "0.4.21"
nix = { version = "0.27.1", default-features = false, features = ["user", "fs"] }
walkdir = "2.4.0"

# rest backend
backoff = "0.4.0"
reqwest = { version = "0.11.23", default-features = false, features = ["json", "rustls-tls-native-roots", "stream", "blocking"] }
url = "2.5.0"

# opendal backend
once_cell = "1.19.0"
tokio = "1.34.0"

# crypto
rand = "0.8.5"

# parallelize
# crossbeam-channel = "0.5.10"
# pariter = "0.5.1"
rayon = "1.8.0"

[target.'cfg(not(windows))'.dependencies]
# opendal backend - sftp is not supported on windows, see https://github.com/apache/incubator-opendal/issues/2963
opendal = { version = "0.43.0", features = ["services-b2", "services-sftp", "services-swift"] }

[target.'cfg(windows)'.dependencies]
# opendal backend
opendal = { version = "0.43.0", features = ["services-b2", "services-swift"] }

[dev-dependencies]
rstest = "0.18.2"
