[package]
name = "rustic_core"
version = "0.5.4"
authors = ["the rustic-rs team"]
categories = ["data-structures", "encoding", "filesystem"]
documentation = "https://docs.rs/rustic_core"
edition = "2021"
homepage = "https://rustic.cli.rs/"
include = ["src/**/*", "LICENSE-*", "README.md"]
keywords = ["backup", "restic", "deduplication", "encryption", "library"]
license = "Apache-2.0 OR MIT"
publish = true
readme = "README.md"
repository = "https://github.com/rustic-rs/rustic_core"
resolver = "2"
rust-version = { workspace = true }
description = """
rustic_core - library for fast, encrypted, deduplicated backups that powers rustic-rs
"""

[lib]
path = "src/lib.rs"
name = "rustic_core"
test = true
doctest = true
bench = true
doc = true
harness = true
edition = "2021"

[features]
default = []
cli = ["merge", "clap"]
merge = ["dep:conflate"]
clap = ["dep:clap"]
webdav = ["dep:dav-server", "dep:futures"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--document-private-items", "--generate-link-to-definition"]

[dependencies]
# errors
displaydoc = "0.2.5"
thiserror = "1.0.64"

# macros
derivative = "2.2.0"
derive_more = { version = "1.0.0", features = ["add", "constructor", "display", "from", "deref", "from_str"] }
derive_setters = "0.1.6"

# logging
log = "0.4.22"

# parallelize
crossbeam-channel = "0.5.13"
pariter = "0.5.1"
rayon = "1.10.0"

# crypto
aes256ctr_poly1305aes = { version = "0.2.0", features = ["std"] }
rand = "0.8.5"
scrypt = { version = "0.11.0", default-features = false }

# serialization / packing
binrw = "0.14.0"
hex = { version = "0.4.3", features = ["serde"] }
integer-sqrt = "0.1.5"
serde = { version = "1.0.210" }
serde-aux = "4.5.0"
serde_derive = "1.0.210"
serde_json = "1.0.128"
serde_with = { version = "3.10.0", features = ["base64"] }

# local source/destination
cached = { version = "0.53.1", default-features = false, features = ["proc_macro"] }
dunce = "1.0.5"
filetime = "0.2.25"
ignore = "0.4.23"
nix = { version = "0.29.0", default-features = false, features = ["user", "fs"] }
path-dedot = "3.1.1"
walkdir = "2.5.0"

# cache
cachedir = "0.3.1"
dirs = "5.0.1"

# cli support
clap = { version = "4.5.19", optional = true, features = ["derive", "env", "wrap_help"] }
conflate = { version = "0.2.0", optional = true }

# vfs support
dav-server = { version = "0.7.0", default-features = false, optional = true }
futures = { version = "0.3.30", optional = true }
runtime-format = "0.1.3"

# other dependencies
bytes = { workspace = true }
bytesize = "1.3.0"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "serde"] }
enum-map = { workspace = true }
enum-map-derive = "0.17.0"
enumset = { version = "1.1.5", features = ["serde"] }
gethostname = "0.5.0"
humantime = "2.1.0"
itertools = "0.13.0"
quick_cache = "0.6.9"
shell-words = "1.1.0"
strum = { version = "0.26.3", features = ["derive"] }
zstd = "0.13.2"
smol_str = "0.3.2"

[target.'cfg(not(windows))'.dependencies]
sha2 = { version = "0.10.8", features = ["asm"] }

[target.'cfg(windows)'.dependencies]
# unfortunately, the asm extensions do not build on Windows, see https://github.com/RustCrypto/asm-hashes/issues/17
# and https://github.com/RustCrypto/asm-hashes/pull/issues/78
sha2 = "0.10.8"

[target.'cfg(not(any(windows, target_os="openbsd")))'.dependencies]
# for local source/destination
xattr = "1"

[dev-dependencies]
anyhow = { workspace = true }
expect-test = "1.5.0"
flate2 = "1.0.34"
globset = "0.4.15"
insta = { version = "1.40.0", features = ["redactions", "ron"] }
mockall = "0.13"
pretty_assertions = "1.4.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rstest = { workspace = true }
rustdoc-json = "0.9.2"
# We need to have rustic_backend here, because the doc-tests in lib.rs of rustic_core
rustic_backend = { workspace = true }
rustic_testing = { workspace = true }
rustup-toolchain = "0.1.7"
simplelog = "0.12.2"
tar = "0.4.42"
tempfile = { workspace = true }
toml = "0.8.19"

[lints]
workspace = true
