[package]
name = "rustic_core"
version = "0.7.3"
authors = ["the rustic-rs team"]
categories = ["data-structures", "encoding", "filesystem"]
documentation = "https://docs.rs/rustic_core"
edition = "2024"
homepage = "https://rustic.cli.rs/"
include = ["src/**/*", "LICENSE-*", "README.md"]
keywords = ["backup", "restic", "deduplication", "encryption", "library"]
license = "Apache-2.0 OR MIT"
publish = true
readme = "README.md"
repository = "https://github.com/rustic-rs/rustic_core"
resolver = "3"
rust-version = { workspace = true }
description = """
rustic_core - library for fast, encrypted, deduplicated backups that powers rustic-rs
"""

[lib]
path = "src/lib.rs"
name = "rustic_core"
test = true
doctest = true
bench = true
doc = true
harness = true
edition = "2021"

[features]
default = []
cli = ["merge", "clap"]
merge = ["dep:conflate"]
clap = ["dep:clap"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--document-private-items", "--generate-link-to-definition"]

[dependencies]
# errors
displaydoc = { workspace = true }
thiserror = { workspace = true }

# macros
derive_more = { version = "2.0.1", features = ["add", "constructor", "display", "from", "deref", "from_str"] }
derive_setters = "0.1.6"

# logging
log = { workspace = true }

# parallelize
crossbeam-channel = "0.5.15"
pariter = "0.5.1"
rayon = "1.10.0"

# crypto
aes256ctr_poly1305aes = { version = "0.2.1", features = ["std"] } # we need std here for error impls
rand = "0.9.1"
scrypt = { version = "0.11.0", default-features = false, features = ["std"] } # we need std here for error impls

# serialization / packing
binrw = "0.14.1"
hex = { version = "0.4.3", features = ["serde"] }
integer-sqrt = "0.1.5"
rustic_cdc = "0.3.1"
serde = { version = "1.0.219" }
serde-aux = "4.6.0"
serde_derive = "1.0.219"
serde_json = "1.0.140"
serde_with = { version = "3.12.0", features = ["base64"] }

# local source/destination
cached = { version = "0.55.1", default-features = false, features = ["proc_macro"] }
dunce = "1.0.5"
filetime = "0.2.25"
ignore = "0.4.23"
nix = { version = "0.29.0", default-features = false, features = ["user", "fs"] }
path-dedot = "3.1.1"
walkdir = "2.5.0"

# cache
cachedir = "0.3.1"
dirs = "6.0.0"

# cli support
clap = { version = "4.5.37", optional = true, features = ["derive", "env", "wrap_help"] }
conflate = { version = "0.3.3", optional = true }

# vfs support
runtime-format = "0.1.3"

# other dependencies
bytes = { workspace = true }
bytesize = "2.0.1"
chrono = { version = "0.4.40", default-features = false, features = ["clock", "serde"] }
ecow = "0.2.4"
enum-map = { workspace = true }
enum-map-derive = "0.17.0"
enumset = { version = "1.1.5", features = ["serde"] }
gethostname = "1.0.1"
humantime = "2.2.0"
itertools = "0.14.0"
quick_cache = "0.6.13"
shell-words = "1.1.0"
strum = { version = "0.27.1", features = ["derive"] }
zstd = "0.13.3"
interpolation_search = "1.2.0"
sub-array = "0.1.1"

[target.'cfg(not(windows))'.dependencies]
sha2 = { version = "0.10.8", features = ["asm"] }

[target.'cfg(windows)'.dependencies]
# unfortunately, the asm extensions do not build on Windows, see https://github.com/RustCrypto/asm-hashes/issues/17
# and https://github.com/RustCrypto/asm-hashes/pull/issues/78
sha2 = "0.10.8"

[target.'cfg(not(any(windows, target_os="openbsd")))'.dependencies]
# for local source/destination
xattr = "1"

[dev-dependencies]
anyhow = { workspace = true }
criterion = "0.5.1"
expect-test = "1.5.1"
flate2 = "1.1.1"
globset = "0.4.16"
insta = { version = "1.42.2", features = ["redactions", "ron"] }
mockall = "0.13"
pretty_assertions = "1.4.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rstest = { workspace = true }
rustdoc-json = "0.9.5"
# We need to have rustic_backend here, because the doc-tests in lib.rs of rustic_core
rustic_backend = { workspace = true }
rustic_testing = { workspace = true }
rustup-toolchain = "0.1.10"
simplelog = "0.12.2"
tar = "0.4.44"
tempfile = { workspace = true }
toml = "0.8.20"

[lints]
workspace = true

[[bench]]
name = "index"
harness = false
