[package]
name = "rustic_testing"
version = "0.3.1"
edition = "2021"
license = "Apache-2.0 OR MIT"
publish = true
rust-version = { workspace = true }
description = """
rustic_testuing - library for test support in rustic-rs
"""

[dependencies]
aho-corasick = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
enum-map = { workspace = true }
rustic_core = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
