[package]
name = "find"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
globset = "0.4.16"
rustic_backend = { workspace = true }
rustic_core = { workspace = true }
simplelog = { workspace = true }
typed-path = "0.10.0"

[[example]]
name = "find"
